Header Section Done

--- a/index.html
+++ b/index.html
@@ -1,16 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Challenge-Begin</title>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+    rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
     <header>
-        <h3>Assignment Folder Setup</h3>
+        <!-- <h3>Assignment Folder Setup</h3> -->
+        <div class="header-div">
+            <img src="assets/Group.png" alt="">
+            <h2>"In the near future,I hope to become a Developer."</h2>
+            <p>Motivated junior web developer looking for a role as full-stack web developer at SoftwareX. Passionate
+                about building first-class web applications. Developed an e-commerce website for a local fashion
+                retailer while at University X. Relevant skills include DNS Management, Database, Debugging, and more.
+            </p>
+            <button class="btn-primary btn-font">Contact with Me</button>
+        </div>
     </header>
     <main></main>
     <footer></footer>
 </body>
+
 </html>
