Why Section Done

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Challenge-Begin</title>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
-    rel="stylesheet">
+        rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
+    <!-------------- Header Section --------------->
     <header>
-        <!-- <h3>Assignment Folder Setup</h3> -->
         <div class="header-div">
             <img src="assets/Group.png" alt="">
             <h2>"In the near future,I hope to become a Developer."</h2>
@@ -23,7 +23,58 @@
             <button class="btn-primary btn-font">Contact with Me</button>
         </div>
     </header>
-    <main></main>
+
+
+    <!-- -------------  Main Section -------------------->
+    <main class="main-position">
+        <div class="why-layer">
+            <!---Header line --->
+        <section class="header-line">
+            <h3>Why Web Development??</h3>
+            <p>Web development is a fast-paced and challenging career, centered on creative problem-solving and
+                continuous innovation. As a web developer you'll work with a multidisciplinary team of designers, other
+                developers, and marketers to realize your projects.</p>
+        </section>
+        <!-- layer-1-->
+        <section class="layer-one">
+            <div>
+                <h4>I Will Do Codding And Change The World</h4>
+                <P>Coding is powering digital health platforms, telemedicine services, brand medical research, paving
+                    the
+                    way for a healthier future.</P>
+                <button>Learn More</button>
+            </div>
+            <div>
+                <img src="assets/Layer_1.png" alt="">
+            </div>
+        </section>
+        <!-- layer-2 -->
+        <section class="layer-one">
+
+            <div>
+                <img src="assets/Group 3.png" alt="">
+            </div>
+            <div>
+                <h4>I Will Do Codding And Change The World</h4>
+                <P>Coding is powering digital health platforms, telemedicine services, and medical research, paving the
+                    way for a healthier future.</P>
+                <button>Learn More</button>
+            </div>
+        </section>
+        <!-- layer-3 -->
+        <section class="layer-one">
+            <div>
+                <h4>I Will Do Codding And Change The World</h4>
+                <P>Coding is powering digital health platforms, telemedicine services, and medical research, paving the
+                    way for a healthier future.</P>
+                <button>Learn More</button>
+            </div>
+            <div>
+                <img src="assets/Group 4.png" alt="">
+            </div>
+        </section>
+        </div>
+    </main>
     <footer></footer>
 </body>
 
