--- a/index.html
+++ b/index.html
@@ -27,53 +27,72 @@
 
     <!-- -------------  Main Section -------------------->
     <main class="main-position">
+        <!--Why Section --->
         <div class="why-layer">
             <!---Header line --->
-        <section class="header-line">
-            <h3>Why Web Development??</h3>
-            <p>Web development is a fast-paced and challenging career, centered on creative problem-solving and
-                continuous innovation. As a web developer you'll work with a multidisciplinary team of designers, other
-                developers, and marketers to realize your projects.</p>
-        </section>
-        <!-- layer-1-->
-        <section class="layer-one">
-            <div>
-                <h4>I Will Do Codding And Change The World</h4>
-                <P>Coding is powering digital health platforms, telemedicine services, brand medical research, paving
-                    the
-                    way for a healthier future.</P>
-                <button>Learn More</button>
-            </div>
-            <div>
-                <img src="assets/Layer_1.png" alt="">
-            </div>
-        </section>
-        <!-- layer-2 -->
-        <section class="layer-one">
+            <section class="header-line">
+                <h3>Why Web Development??</h3>
+                <p>Web development is a fast-paced and challenging career, centered on creative problem-solving and
+                    continuous innovation. As a web developer you'll work with a multidisciplinary team of designers,
+                    other
+                    developers, and marketers to realize your projects.</p>
+            </section>
+            <!-- layer-1-->
+            <section class="layer-one">
+                <div>
+                    <h4>I Will Do Codding And Change The World</h4>
+                    <P>Coding is powering digital health platforms, telemedicine services, brand medical research,
+                        paving
+                        the
+                        way for a healthier future.</P>
+                    <button>Learn More</button>
+                </div>
+                <div>
+                    <img src="assets/Layer_1.png" alt="">
+                </div>
+            </section>
+            <!-- layer-2 -->
+            <section class="layer-one">
 
-            <div>
-                <img src="assets/Group 3.png" alt="">
-            </div>
-            <div>
-                <h4>I Will Do Codding And Change The World</h4>
-                <P>Coding is powering digital health platforms, telemedicine services, and medical research, paving the
-                    way for a healthier future.</P>
-                <button>Learn More</button>
-            </div>
-        </section>
-        <!-- layer-3 -->
-        <section class="layer-one">
-            <div>
-                <h4>I Will Do Codding And Change The World</h4>
-                <P>Coding is powering digital health platforms, telemedicine services, and medical research, paving the
-                    way for a healthier future.</P>
-                <button>Learn More</button>
-            </div>
-            <div>
-                <img src="assets/Group 4.png" alt="">
-            </div>
-        </section>
+                <div>
+                    <img src="assets/Group 3.png" alt="">
+                </div>
+                <div>
+                    <h4>I Will Do Codding And Change The World</h4>
+                    <P>Coding is powering digital health platforms, telemedicine services, and medical research, paving
+                        the
+                        way for a healthier future.</P>
+                    <button>Learn More</button>
+                </div>
+            </section>
+            <!-- layer-3 -->
+            <section class="layer-one">
+                <div>
+                    <h4>I Will Do Codding And Change The World</h4>
+                    <P>Coding is powering digital health platforms, telemedicine services, and medical research, paving
+                        the
+                        way for a healthier future.</P>
+                    <button>Learn More</button>
+                </div>
+                <div>
+                    <img src="assets/Group 4.png" alt="">
+                </div>
+            </section>
         </div>
+        <!--My Inspire Section --->
+        <section>
+            <div class="header-line">
+                <h2>My Inspiration</h2>
+                <p>The opportunity to blend creativity with technical skills and contribute to the ever-evolving digital
+                    landscape is what captivated me and continues to drive my passion for web development.</p>
+            </div>
+            <div class="video-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/i4laq6e_B6U?si=5rOH1tTDKCel1co9"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
