--- a/index.html
+++ b/index.html
@@ -94,7 +94,21 @@
             </div>
         </section>
     </main>
-    <footer></footer>
+
+    <!-- ------------- Footer Section-------------------->
+    <footer class="footer-section">
+        <section class="footer-back-img">
+            <div>
+                <h4>I Need Support</h4>
+                <p>Talk to someone you know will support you and offer you honest advice. If you comfortable and have a
+                    family member or a friend that you trust.</p>
+            </div>
+            <div>
+                <input type="text" name="" id="" placeholder="Suggest me any feadback for me">
+                <button>Submit</button>
+            </div>
+        </section>
+    </footer>
 </body>
 
 </html>
