--- a/index.html
+++ b/index.html
@@ -108,6 +108,17 @@
                 <button>Submit</button>
             </div>
         </section>
+        <!-- Footer Link -->
+        <section class="footer-link">
+            <div>
+                <h4>An open commitment by Awlad Hosain</h4>
+            </div>
+            <div>
+                <a href="https://www.facebook.com/"><img href src="assets/facebook.png" alt=""></a>
+                <a href="https://github.com/"><img href src="assets/github.png" alt=""></a>
+                <a href="https://bd.linkedin.com/"><img href src="assets/linkedin-icon 1.png" alt=""></a>
+            </div>
+        </section>
     </footer>
 </body>
 
