onclick to footer secton done

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 about building first-class web applications. Developed an e-commerce website for a local fashion
                 retailer while at University X. Relevant skills include DNS Management, Database, Debugging, and more.
             </p>
-            <button class="btn-primary btn-font">Contact with Me</button>
+            <button class="btn-primary btn-font" onclick="location.href='#click-footer-section'">Contact with Me</button>
         </div>
     </header>
 
@@ -96,7 +96,7 @@
     </main>
 
     <!-- ------------- Footer Section-------------------->
-    <footer class="footer-section">
+    <footer id="click-footer-section" class="footer-section">
         <section class="footer-back-img">
             <div>
                 <h4>I Need Support</h4>
