--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <!-------------- Header Section --------------->
     <header>
-        <div class="header-div">
+        <div class="header-div open-sans-normal">
             <img src="assets/Group.png" alt="">
             <h2>"In the near future,I hope to become a Developer."</h2>
             <p>Motivated junior web developer looking for a role as full-stack web developer at SoftwareX. Passionate
@@ -26,12 +26,12 @@
 
 
     <!-- -------------  Main Section -------------------->
-    <main class="main-position">
+    <main class="main-position open-sans-normal">
         <!--Why Section --->
         <div class="why-layer">
             <!---Header line --->
             <section class="header-line">
-                <h3>Why Web Development??</h3>
+                <h3 class="why-header">Why Web Development??</h3>
                 <p>Web development is a fast-paced and challenging career, centered on creative problem-solving and
                     continuous innovation. As a web developer you'll work with a multidisciplinary team of designers,
                     other
